--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 eframe = { version = "0.30", default-features = false, features = [
     "default_fonts", # Embed the default egui fonts.
-    "glow", # Use the glow rendering backend. Alternative: "wgpu".
+    "wgpu", # Use the glow rendering backend. Alternative: "wgpu".
     "persistence", # Enable restoring app state when restarting the app.
     #    "wayland",       # To support Linux (and CI)
     "__screenshot"
@@ -28,3 +28,4 @@ serde_json = "1.0.138"
 xcap = "0.2.2"
 mouse_position = "0.1.4"
 tex2typst-rs = "0.2.0"
+chrono = "0.4.39"
