--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,13 @@ eframe = { version = "0.31", default-features = false, features = [
     "default_fonts", # Embed the default egui fonts.
     "wgpu", # Use the glow rendering backend. Alternative: "wgpu".
     "persistence", # Enable restoring app state when restarting the app.
-    #    "wayland",       # To support Linux (and CI)
+    "wayland", # To support Linux (and CI)
 ] }
 serde = { version = "1", features = ["derive"] }
 egui_extras = { version = "0.31.0", features = [
     "all_loaders",
 ] }
-uuid = { version = "1.12.1", features = [
+uuid = { version = "1.13.1", features = [
     "v4",
     "fast-rng",
     "macro-diagnostics",
@@ -23,9 +23,10 @@ uuid = { version = "1.12.1", features = [
 livesplit-hotkey = "0.8.0"
 reqwest = { version = "0.12.12", features = ["multipart", "json", "blocking"] }
 serde_json = "1.0.138"
-tex2typst-rs = "0.3.6"
+tex2typst-rs = { version = "0.4.0", git = "https://github.com/Unpredictability/tex2typst-rs" }
 chrono = "0.4.39"
 egui-keybind = { version = "0.6.0", features = ["serde"] }
+egui-notify = "0.19.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 screen-snip = "0.1.0"
